force-app/main/default/objects/Pipeline_Snapshot__c/Pipeline_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Daily aggregate snapshot of open pipeline by Owner x Stage x Type. Materialized by the &quot;Pipeline Snapshot Daily&quot; AnalyticSnapshot. Aggregate-only — no per-deal detail. Compliant with SimCorp AI Code of Conduct §8.</description>
    <label>Pipeline Snapshot</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Pipeline Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>