force-app/main/default/objects/Pipeline_Snapshot__c/fields/Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count__c</fullName>
    <description>Count of opportunities in this Owner x Stage x Type bucket on Snapshot_Date. Sourced from RowCount on the source summary report.</description>
    <label>Opp Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>