force-app/main/default/objects/Pipeline_Snapshot__c/fields/Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Type__c</fullName>
    <description>Opportunity Type — Land, Expand, or Renewal. Per SimCorp metric convention, ARR fields apply to Land+Expand, ACV fields apply to Renewal. Never blend.</description>
    <label>Opp Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>