force-app/main/default/objects/Pipeline_Snapshot__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Opportunity owner full name. Sourced from Owner.Name on the source pipeline report. Aggregate dimension only — no per-deal detail.</description>
    <label>Owner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>