force-app/main/default/objects/Pipeline_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Date the snapshot row was materialized (one row per Snapshot_Date x Owner x Stage x Type). Indexed via external-id for efficient LAST_N_DAYS / date-range filters.</description>
    <externalId>true</externalId>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>