force-app/main/default/objects/Pipeline_Snapshot__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Key__c</fullName>
    <description>Composite uniqueness key: Snapshot_Date | Owner_Name | Stage_Name | Opp_Type. Indexed/unique via external-id; lets bulk upserts and audit-trail queries hit a single row per (date, owner, stage, type).</description>
    <externalId>true</externalId>
    <formula>TEXT(Snapshot_Date__c) &amp; &quot;|&quot; &amp; Owner_Name__c &amp; &quot;|&quot; &amp; Stage_Name__c &amp; &quot;|&quot; &amp; Opp_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Key</label>
    <type>Text</type>
    <unique>true</unique>
</CustomField>