force-app/main/default/objects/Pipeline_Snapshot__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Opportunity stage at snapshot time. SimCorp 8-stage process: 1 Prospecting, 2 Discovery, 3 Engagement, 4 Shortlisted, 5 Preferred, 6 Contracting, 7 Opt-out, 8 Won.</description>
    <label>Stage Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>