force-app/main/default/objects/Pipeline_Snapshot__c/fields/Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_ACV__c</fullName>
    <description>Sum of APTS_Renewal_ACV__c for Renewal opps in this Owner x Stage x Type bucket on Snapshot_Date. FX-converted at snapshot time via SF report aggregation. Zero / empty for Land+Expand rows.</description>
    <label>Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>