force-app/main/default/objects/Pipeline_Snapshot__c/fields/Total_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR__c</fullName>
    <description>Sum of APTS_Opportunity_ARR__c for Land+Expand opps in this Owner x Stage x Type bucket on Snapshot_Date. FX-converted at snapshot time via SF report aggregation. Zero / empty for Renewal rows.</description>
    <label>Total ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>