force-app/main/default/objects/Pipeline_Snapshot__c/fields/Weighted_ARR__c.field-meta.xml
<CustomField>
    <fullName>Weighted_ARR__c</fullName>
    <description>Forecast-weighted ARR for the bucket. Sourced from APTS_Forecast_ARR__c on the source report (FX-converted). Used as forecast input for cohort accuracy back-testing.</description>
    <label>Weighted ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>